// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should call onCancel 1`] = `
<Form
  cancelOptions={
    Object {
      "onCancel": [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    }
  }
  name="jest"
  submitOptions={
    Object {
      "onSubmit": [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    }
  }
>
  <div
    className="mko-form  mko_u3fnxm-mkoForm"
  >
    <form
      autoComplete="off"
      className="mko-form__form  mko_u3fnxm-form"
      name="jest"
      noValidate={true}
      onSubmit={[Function]}
    >
      <div>
        Form Children
      </div>
      <div
        className="button-group"
      >
        <Button
          className="mko-form__submit"
          type="submit"
        >
          <button
            className="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard mko-form__submit"
            type="submit"
          >
            Save
          </button>
        </Button>
        <Button
          className="mko-form__cancel"
          onClick={[Function]}
          type="button"
        >
          <button
            className="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard mko-form__cancel"
            onClick={[Function]}
            type="button"
          >
            Cancel
          </button>
        </Button>
      </div>
    </form>
  </div>
</Form>
`;

exports[`should call onSubmit 1`] = `
<Form
  cancelOptions={
    Object {
      "onCancel": [MockFunction],
    }
  }
  name="jest"
  submitOptions={
    Object {
      "onSubmit": [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    }
  }
>
  <div
    className="mko-form  mko_u3fnxm-mkoForm"
  >
    <form
      autoComplete="off"
      className="mko-form__form  mko_u3fnxm-form"
      name="jest"
      noValidate={true}
      onSubmit={[Function]}
    >
      <div>
        Form Children
      </div>
      <div
        className="button-group"
      >
        <Button
          className="mko-form__submit"
          type="submit"
        >
          <button
            className="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard mko-form__submit"
            type="submit"
          >
            Save
          </button>
        </Button>
        <Button
          className="mko-form__cancel"
          onClick={[Function]}
          type="button"
        >
          <button
            className="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard mko-form__cancel"
            onClick={[Function]}
            type="button"
          >
            Cancel
          </button>
        </Button>
      </div>
    </form>
  </div>
</Form>
`;

exports[`should display custom submit button text 1`] = `
<Form
  cancelOptions={
    Object {
      "onCancel": [MockFunction],
    }
  }
  name="jest"
  submitOptions={
    Object {
      "onSubmit": [MockFunction],
      "text": "Save - Jest",
    }
  }
>
  <div
    className="mko-form  mko_u3fnxm-mkoForm"
  >
    <form
      autoComplete="off"
      className="mko-form__form  mko_u3fnxm-form"
      name="jest"
      noValidate={true}
      onSubmit={[Function]}
    >
      <div>
        Form Children
      </div>
      <div
        className="button-group"
      >
        <Button
          className="mko-form__submit"
          type="submit"
        >
          <button
            className="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard mko-form__submit"
            type="submit"
          >
            Save - Jest
          </button>
        </Button>
        <Button
          className="mko-form__cancel"
          onClick={[Function]}
          type="button"
        >
          <button
            className="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard mko-form__cancel"
            onClick={[Function]}
            type="button"
          >
            Cancel
          </button>
        </Button>
      </div>
    </form>
  </div>
</Form>
`;

exports[`should render children 1`] = `
<div
  className="mko-form  mko_u3fnxm-mkoForm"
>
  <form
    autoComplete="off"
    className="mko-form__form  mko_u3fnxm-form"
    name="jest"
    noValidate={true}
    onSubmit={[Function]}
  >
    <div
      id="jestChild"
    >
      Form Children
    </div>
    <div
      className="button-group"
    >
      <Button
        className="mko-form__submit"
        type="submit"
      >
        Save
      </Button>
      <Button
        className="mko-form__cancel"
        onClick={[Function]}
        type="button"
      >
        Cancel
      </Button>
    </div>
  </form>
</div>
`;

exports[`should render title if truthy 1`] = `
<div
  className="mko-form  mko_u3fnxm-mkoForm"
>
  <h2
    className="mko-form__title  mko_u3fnxm-title"
  >
    jester
  </h2>
  <form
    autoComplete="off"
    className="mko-form__form  mko_u3fnxm-form"
    name="jest"
    noValidate={true}
    onSubmit={[Function]}
  >
    <div>
      Form Children
    </div>
    <div
      className="button-group"
    >
      <Button
        className="mko-form__submit"
        type="submit"
      >
        Save
      </Button>
      <Button
        className="mko-form__cancel"
        onClick={[Function]}
        type="button"
      >
        Cancel
      </Button>
    </div>
  </form>
</div>
`;

exports[`should render with minimum props 1`] = `
<div
  className="mko-form  mko_u3fnxm-mkoForm"
>
  <form
    autoComplete="off"
    className="mko-form__form  mko_u3fnxm-form"
    name="jest"
    noValidate={true}
    onSubmit={[Function]}
  >
    <div>
      Form Children
    </div>
    <div
      className="button-group"
    >
      <Button
        className="mko-form__submit"
        type="submit"
      >
        Save
      </Button>
      <Button
        className="mko-form__cancel"
        onClick={[Function]}
        type="button"
      >
        Cancel
      </Button>
    </div>
  </form>
</div>
`;
